HelloUltraviolet/Fixtures/RejectedSource/Expressions/CastValidity/Source/Main.uv
//! Rejected cast specimen for cast validity.

public procedure castValidityReference() -> f32 {
    return true as f32
}
